--- a/src/index.css
+++ b/src/index.css
@@ -50,3 +50,10 @@
     transition-duration: 0.01ms !important;
   }
 }
+/* Line clamp utility for truncating text */
+.line-clamp-2 {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
